--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -6,10 +6,10 @@ on:
       - main
 concurrency: ${{ github.workflow }}
 env:
-  ROLE_ARN: ${{ vars.IAM_ROLE_ARN }}
+  ROLE_ARN: ${{ secrets.IAM_ROLE_ARN }}
   TARGET_ENV: 'Prod'
   TARGET_AWS_REGION: us-east-1
-  AWS_ACCOUNT_ID_LIST_FOR_LB: ${{ vars.PROD_AWS_ACCOUNT_ID_LIST_FOR_LB }}
+  AWS_ACCOUNT_ID_LIST_FOR_LB: ${{ secrets.PROD_AWS_ACCOUNT_ID_LIST_FOR_LB }}
   ADMIN_USER_ID_LIST: ${{ vars.PROD_ADMIN_USER_ID_LIST }}
   ROLE_NAME_FOR_LB: bedrock-remote-swe-role-prod
 jobs:
