--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -14,7 +14,7 @@ env:
   ROLE_NAME_FOR_LB: bedrock-remote-swe-role
 jobs:
   Deploy-cdk:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     steps:
       - name: add-mask
         run: |
