--- a/packages/agent-core/tsconfig.json
+++ b/packages/agent-core/tsconfig.json
@@ -8,6 +8,7 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "declarationMap": true,
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*.ts"],
