--- a/cdk/package.json
+++ b/cdk/package.json
@@ -25,8 +25,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-ec2": "^3.749.0",
-    "aws-cdk-lib": "^2.189.1",
+    "aws-cdk-lib": "^2.187.0",
+    "cdk-image-pipeline": "^0.5.104",
     "cdk-nag": "^2.35.33",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "yaml": "^2.7.1"
   }
 }
