--- a/packages/slack-bolt-app/package.json
+++ b/packages/slack-bolt-app/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/client-ec2": "^3.743.0",
     "@aws-sdk/client-lambda": "^3.744.0",
     "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/client-ssm": "^3.787.0",
     "@aws-sdk/credential-provider-node": "^3.750.0",
     "@aws-sdk/lib-dynamodb": "^3.751.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
