fix image builder component

--- a/cdk/lib/constructs/worker/resources/image-component-template.yml
+++ b/cdk/lib/constructs/worker/resources/image-component-template.yml
@@ -22,11 +22,11 @@ phases:
             - docker --version
             - python --version
             - gh --version
-            - sudo -u ubuntu -i -c "uv --version"
-            - sudo -u ubuntu -i -c "uvx --version"
-            - sudo -u ubuntu -i -c "node --version"
-            - sudo -u ubuntu -i -c "npm --version"
-            - sudo -u ubuntu -i -c "npx --version"
+            - sudo -u ubuntu bash -i -c "uv --version"
+            - sudo -u ubuntu bash -i -c "uvx --version"
+            - sudo -u ubuntu bash -i -c "node --version"
+            - sudo -u ubuntu bash -i -c "npm --version"
+            - sudo -u ubuntu bash -i -c "npx --version"
   - name: test
     steps:
       - name: HelloWorldStep
@@ -37,8 +37,8 @@ phases:
             - docker --version
             - python --version
             - gh --version
-            - sudo -u ubuntu -i -c "uv --version"
-            - sudo -u ubuntu -i -c "uvx --version"
-            - sudo -u ubuntu -i -c "node --version"
-            - sudo -u ubuntu -i -c "npm --version"
-            - sudo -u ubuntu -i -c "npx --version"
+            - sudo -u ubuntu bash -i -c "uv --version"
+            - sudo -u ubuntu bash -i -c "uvx --version"
+            - sudo -u ubuntu bash -i -c "node --version"
+            - sudo -u ubuntu bash -i -c "npm --version"
+            - sudo -u ubuntu bash -i -c "npx --version"
