set prod ROLE_NAME_FOR_LB from gh variables

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -11,7 +11,7 @@ env:
   TARGET_AWS_REGION: us-east-1
   AWS_ACCOUNT_ID_LIST_FOR_LB: ${{ secrets.PROD_AWS_ACCOUNT_ID_LIST_FOR_LB }}
   ADMIN_USER_ID_LIST: ${{ vars.PROD_ADMIN_USER_ID_LIST }}
-  ROLE_NAME_FOR_LB: bedrock-remote-swe-role
+  ROLE_NAME_FOR_LB: ${{ vars.PROD_ROLE_NAME_FOR_LB }}
 jobs:
   Deploy-cdk:
     runs-on: ubuntu-latest
