fix playwright fails to run after started from a cached ami (#78)
*Issue #, if available:*

*Description of changes:*

browser_install tool from playwright MCP fails to run after launched
from a cached AMI.

The suggested workaround here
https://github.com/microsoft/playwright-mcp/issues/218#issuecomment-2815992016
seems to fix the issue (adding `--browser=chromium`).

Also including some refactors.


By submitting this pull request, I confirm that you can use, modify,
copy, and redistribute this contribution, under the terms of your
choice.

--- a/cdk/lib/constructs/worker/resources/image-component-template.yml
+++ b/cdk/lib/constructs/worker/resources/image-component-template.yml
@@ -10,6 +10,7 @@ phases:
       - name: InstallDependencies
         action: ExecuteBash
         inputs:
+          # commands will be replaced from CDK
           commands: 
             - dummy
   - name: validate
